# polyverse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
cpp_engine/: CMakeLists.txt
cpp_engine/include/: engine.h
cpp_engine/src/: engine.cpp  rest_bridge.cpp
data_pipeline/notebooks/: analysis.ipynb
data_pipeline/spark_jobs/: process_data.py
docs/: api_reference.md  architecture.md  setup_guide.md
docs/diagrams/: system_flow.mmd
elixir_websocket/: Dockerfile  README.md  mix.exs
elixir_websocket/config/: config.exs
elixir_websocket/test/: polyverse_websocket_test.exs
go_orchestrator/: Dockerfile  go.mod  go.sum  main.go
go_orchestrator/handlers/: task_handler.go
go_orchestrator/utils/: scheduler.go
hub/: Dockerfile  requirements.txt
hub/app/: __init__.py  event_bus.py  main.py
hub/tests/: test_event_bus.py  test_main.py
infra/: ci-cd.yml  docker-compose.yml
infra/kubernetes/: deployment.yaml
java_recommender/: Dockerfile  pom.xml
js_dashboard/: Dockerfile  package.json
kotlin_analytics/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
lua_scripting/: Dockerfile  README.md  config.lua  http_server.lua  main.lua  package.lua  script_engine.lua  utils.lua
observatory/: .gitignore  package.json
php_api/: README.md  composer.json  index.php
python_agent/: Dockerfile  agent.py  requirements.txt
ruby_worker/: .gitignore  Dockerfile  Gemfile  README.md  app.rb
rust_signal/: Cargo.toml  Dockerfile
scripts/: benchmark.ps1  deploy.sh  seed_data.py
swift_vision/: VisionService.swift
(+51 files in other folders)
